<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">后台管家</string>
    <string name="app_name1">后台管家</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_process">ProcessActivity</string>
    <string name="title_activity_component">ComponentActivity</string>
    <string name="title_activity_apps_info">程序列表</string>
    <string name="title_activity_services">ServicesActivity</string>
    <string name="tv_all_open">开启</string>
    <string name="tv_all_close">关闭</string>
    <string name="tv_title_apps">后台管理</string>
    <string name="tv_info_text">耗电量%1$s  占用内存%2$s</string>
    <string name="tv_info_text_lowtarget">%1$d个进程和%2$d个服务\t共占用内存%3$s</string>
    <string name="tv_info_unknow">未知</string>
    <string name="isOnLoading">正在加载...</string>
    <string name="sb_all_tip_title">总开关</string>
    <string name="sb_all_tip_info">点击即可开启后台管理</string>
    <string name="sb_app_tip_title">开关</string>
    <string name="sb_app_tip_info">点击即可将该应用加入后台禁用列表</string>
    <string name="item_refresh">刷新</string>
    <string name="item_help">帮助</string>
    <string name="user_help">1.为防止用户误操作，本应用只针对第三方应用进行后台管理。\n\n
                             2.在列表中选中的应用将在锁屏状态下进入完全休眠状态，届时所有依赖后台进程的服务将停止，包括社交应用的消息推送。\n\n
                             3.请用户慎重选择。</string>
    <string name="about">关  于</string>
	<string name="about1">关于</string>
    <string name="dia_OK">确定</string>
    <string name="dia_cancel">取消</string>
    <string name="dia_title">说明</string>
    <string name="toast_no_app">当前无应用</string>
    <string name="title_activity_about">AboutActivity</string>
	<string name="version_info">版本：%1$s</string>
</resources>
