<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">	
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView 
            android:layout_width="45dp"
            android:layout_height="45dp"
			android:layout_marginStart="10dp"
            android:src="@drawable/ic_launcher"/>
		<TextView
			android:id="@+id/tv_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/dia_title"
			android:textSize="22sp"
			android:textColor="#000000"/>		
	</LinearLayout>	
	
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#34B5E5">
    </View>
	
    <TextView
        android:id="@+id/tv_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:padding="12dp"
        android:textSize="16sp"
        android:text="@string/user_help" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DCDCDC">
    </View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/dia_cancel" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#DCDCDC">
        </View>
        <Button
            android:id="@+id/btn_comfirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/dia_OK" />
    </LinearLayout>
</LinearLayout>